--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 400px;
-  background: white;
+  background: rgb(52, 180, 255);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -20,7 +20,7 @@
 
 .searchBtn {
   padding: 10px;
-  background: #007bff;
+  background: #002fff;
   color: white;
   border: none;
   cursor: pointer;
