--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+body {
+  font-family: "Balsamiq Sans", sans-serif;
+}
+
 .balsamiq-sans-regular {
   font-family: "Balsamiq Sans", sans-serif;
   font-weight: 400;
